# abrigo-animais

./: .coveragerc  .env.sample  .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yaml  makefile  pyproject.toml  requirements.txt
.github/workflows/: build_n_push.yaml
core/locale/pt_BR/LC_MESSAGES/: django.po
src/: manage.py
src/abrigo_animais/: asgi.py  settings.py  settings_development.py  urls.py  wsgi.py
src/abrigo_animais/core/: admin.py  apps.py  views.py
src/abrigo_animais/core/migrations/: 0001_initial.py
src/abrigo_animais/core/models/: __init__.py  address.py  base.py  contact.py
src/abrigo_animais/core/templates/core/: base.html  footer.html  navbar.html
src/abrigo_animais/shelter/: admin.py  apps.py  urls.py
src/abrigo_animais/shelter/forms/: __init__.py  responsibles.py
src/abrigo_animais/shelter/migrations/: 0001_initial.py  0002_adoptionmodel.py  0002_animalmodel_caremodel.py  0003_animalmodel_shelter_sheltermodel_description_and_more.py
src/abrigo_animais/shelter/models/: __init__.py  adoptions.py  animals.py  cares.py  partners.py  responsibles.py  shelters.py
src/abrigo_animais/shelter/templates/shelter/: adopt_animal.html  adoption_animal.html  adoption_detail.html  adoption_list.html  animal_detail.html  animal_list.html  partner_detail.html  partner_list.html  shelter_detail.html  shelter_donation.html  shelter_home.html  shelter_list.html
src/abrigo_animais/shelter/views/: __init__.py  adoption_animal.py  adoptions.py  animals.py  partners.py  shelter.py  shelter_donation.py
(+5 files in other folders)
